--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,8 @@ html, body {
   height: 100%;
   display: flex;
   flex-direction: column;
-  background-color: #d5b949; 
+  /* background-color: #d5b949; */
+  background-color: black; 
 }
 
 nav {
