Initial second changes

--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@ nav {
   padding: 20px;
   color: #ffcc00; 
   font-size: 1.5em;
-  border-bottom: 5px solid #f80202; 
+  border-bottom: 5px solid #00B8F1; 
 }
 
 .riddles {
